# python-backend

./: Dockerfile  pyproject.toml
migrations/: README  env.py
migrations/versions/: fb8a53993cf2_initial_migration.py
src/: index.py
src/libdata/: settings.py
src/libdata/models/: tables.py
src/libmain/: settings.py
src/libmain/models/: users_model.py
src/libmain/routers/: root.py  users_router.py
src/libmain/services/: users_service.py
